--- a/ionic_photos/package.json
+++ b/ionic_photos/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bulma": "^0.7.1",
     "dotenv": "^5.0.1",
     "node-sass-chokidar": "^1.3.0",
     "react": "^16.4.0",
