--- a/ionic_photos/package.json
+++ b/ionic_photos/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "bulma": "^0.7.1",
     "dotenv": "^5.0.1",
+    "jest-enzyme": "^6.0.1",
     "node-sass-chokidar": "^1.3.0",
+    "npm": "^6.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4"
